--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ header {
 
 a {
     color: green;
-    text-decoration: underline;
+    text-decoration-color: rgb(165,42,42);
 }
 
 a:visited {
     color: black;
-    text-decoration: none;
+    text-decoration-color: black;
 }
 
 a:hover {
